# color-operators

./: .travis.yml  Cargo.toml
.github/: README.md
examples/hsl-to-hsv/: main.rs
examples/hsl-to-rgb/: main.rs
examples/hsv-to-hsl/: main.rs
examples/hsv-to-rgb/: main.rs
examples/rgb-to-hsl/: main.rs
examples/rgb-to-hsv/: main.rs
src/: lib.rs
src/color/: add.rs  convert_hsl.rs  convert_hsv.rs  convert_rgb.rs  equality.rs  mod.rs  subtract.rs
src/hsl/: add.rs  convert_array.rs  convert_color.rs  convert_hsv.rs  convert_json_value.rs  convert_rgb.rs  convert_tuple.rs  convert_vector.rs  equality.rs  mod.rs  subtract.rs
src/hsv/: add.rs  convert_array.rs  convert_color.rs  convert_hsl.rs  convert_json_value.rs  convert_rgb.rs  convert_tuple.rs  convert_vector.rs  equality.rs  mod.rs  subtract.rs
src/rgb/: add.rs  convert_array.rs  convert_color.rs  convert_hsl.rs  convert_hsv.rs  convert_json_value.rs  convert_tuple.rs  convert_vector.rs  equality.rs  mod.rs  subtract.rs
tests/: tests.rs
tests/hsl/: add.rs  rotate_rgb.rs  subtract.rs
tests/hsl/from/: array.rs  hex.rs  hsv.rs  rgb.rs  vector.rs
tests/hsv/: add.rs  rotate_rgb.rs  subtract.rs
tests/hsv/from/: array.rs  hex.rs  hsl.rs  rgb.rs  vector.rs
tests/rgb/: add.rs  rotate_rgb.rs  subtract.rs
tests/rgb/from/: array.rs  hex.rs  hsl.rs  hsv.rs  vector.rs
